--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div id="container"></div>
     <script src="scripts/balance.js"></script>
+    <script src="scripts/shapes.js"></script>
 </body>
 
 </html>
